fix: patient info component alignments

--- a/src/components/list-of-doctor/list-of-doctor.css
+++ b/src/components/list-of-doctor/list-of-doctor.css
@@ -28,9 +28,11 @@
 .list-of-doctor-patient {
     top: 0;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    
+    display: flex;    
+}
+
+.list-of-doctor-patient .patient-info-container{
+    margin-top: 0px !important;
 }
 
 
