--- a/src/components/patient-info/patient-info.css
+++ b/src/components/patient-info/patient-info.css
@@ -1,15 +1,12 @@
 .patient-info-container {
-  align-self: center;
     text-align: center;
-    align-content: center;
-    justify-content: center;
     margin-top: 70px;
     float: left;
     padding: 20px;
     border-radius: 15px;
     margin-left: 60px;
     background-color: #f2f2f2;
-    height:auto;
+    height:fit-content;
     width: 33%;
 
   }
